--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-environ==0.7.0
 django-heroku==0.3.1
 django-storages==1.11.1
 djangorestframework==3.12.4
+django-tailwind==3.1.1
 gunicorn==20.0.4
 idna==3.2
 ipykernel==5.5.5
