moved tailwind configurations into its own folder in static

--- a/static/js/tailwind/package.json
+++ b/static/js/tailwind/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "tailwind configuration for Pod4 project",
   "scripts": {
-    "start": "NODE_ENV=development tailwindcss --postcss -i ./static/css/tailwind.src.css -o ./static/css/tailwind.css --watch"
+    "start": "NODE_ENV=development tailwindcss --postcss -i ../../css/tailwind.src.css -o ../../css/tailwind.css --watch"
   },
   "repository": {
     "type": "git",
