Organize readme files
Moved the quick start for tailwind into its own md file to make it more organized.
Now the readme.md only has a link that goes to the tailwind quick start.

--- a/static/js/tailwind/package.json
+++ b/static/js/tailwind/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "tailwind configuration for Pod4 project",
   "scripts": {
-    "start": "NODE_ENV=development tailwindcss --postcss -i ../../css/tailwind.src.css -o ../../css/tailwind.css --watch"
+    "start": "NODE_ENV=development tailwindcss --postcss -i ../../css/tailwind.src.css -o ../../css/tailwind.css --watch",
+    "build": "NODE_ENV=production tailwindcss --postcss -i ../../css/tailwind.src.css -o ../../css/tailwind.css --minify"
   },
   "repository": {
     "type": "git",
