--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@
 static/css/tailwind.css
 
 
-*/**/__pycache__
-*/app/__pycache__
-*/Webapp/__pycache__
+*/**/__pycache__/*
+*/app/__pycache__/*
+*/Webapp/__pycache__/*
