ignore tailwind.css again

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # generated tailwind css, ignore since every time we update the style this updates.
 # it is better to just generate one when starting dev env or for production.
 
-# static/css/tailwind.css
+static/css/tailwind.css
 __pycache__
 
 # Django #
