--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+
+# USER MEDIA FOLDER, IGNORE TO NOT OVERRIDE EXISTING DATA WHEN PUSHING/DEPLOYING
+static/user_media
